Tried to fix the overflow issue on mobile landscape view; added the CertificatesNav component and added it to the About page; increased letter-spacing and adjusted padding on elements that needed it

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@ h1, h3 {
 :root {
   font-family: 'Quicksand', sans-serif;
   font-size: 1.25rem;
+  letter-spacing: .05rem;
   --darkgray: #C4C4C4;
   --lightgray: #E5E5E5;
   --blue: #7CF4E6;
@@ -61,6 +62,7 @@ h1, h3 {
   justify-content: flex-start;
   align-items: center;
   background-color: var(--blue);
+  overflow-x: hidden;
 }
 
 /*/////////
@@ -233,7 +235,8 @@ h1, h3 {
   min-height: 200px;
   border-radius: 16px;
   background-color: var(--darkgray);
-  margin: 1em 0;
+  padding: 0 1em;
+  margin: 2em 0;
   font-weight: bold;
 }
 
@@ -247,4 +250,33 @@ h1, h3 {
 
 .education-degree > p {
   margin: 0;
+}
+
+/*//////////////////////
+//////CERTIFICATES//////
+//////////////////////*/
+
+.certificatesNav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: stretch;
+  width: 100%;
+  height: 10vh;
+  background-color: var(--darkgray);
+}
+
+.btn-cert {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--darkgray);
+  font-weight: bold;
+  text-decoration: underline;
+  width: 25%;
+  margin: 0;
+}
+
+.btn-cert:hover, .btn-cert:focus {
+  background-color: var(--lightgray);
+  cursor: pointer;
 }
